--- a/web/source/settings/style.css
+++ b/web/source/settings/style.css
@@ -1068,6 +1068,10 @@ button.with-padding {
 }
 
 .user-detail {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+
 	.profile {
 		overflow: hidden;
 	}
